# BitChat

./: .gitignore  CMakeLists.txt  README.md  application.cpp  application.hpp  baseevent.cpp  baseevent.hpp  blockchain.cpp  blockchain.hpp  blockchain_block.cpp  blockchain_block.hpp  channel.cpp  channel.hpp  communication.cpp  communication.hpp  console.cpp  console.hpp  dispatcher.cpp  dispatcher.hpp  filechannel.cpp  filechannel.hpp  main.cpp  network.cpp  network.hpp  picosha2.hpp  socketchannel.cpp  socketchannel.hpp
